[package]
name = "rustedsims4db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
rand = "0.8.5"
sqlite = "0.27.0"
regex = "1.6.0"
futures = "0.3.23"
clap = { version = "3.2.17", features = ["derive"] }